--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,38 +1,70 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdk 23
+
+    buildFeatures {
+        viewBinding true
+    }
+
+    lintOptions {
+        ignoreWarnings true
+        abortOnError false
+        checkReleaseBuilds false
+        warningsAsErrors false
+        quiet false
+        showAll true
+    }
 
     defaultConfig {
+        namespace "me.mcomella.notificationmanager"
         applicationId "me.mcomella.notificationmanager"
-        minSdkVersion 21
-        targetSdkVersion 23
+        minSdk 21
+        targetSdk 23
         versionCode 8
         versionName "0.0.1"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/INDEX.LIST'
+        exclude 'META-INF/*'
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.7.5'
-}
-repositories {
-    mavenCentral()
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    implementation 'com.android.support:appcompat-v7:23.4.0'
+    implementation 'com.android.support:recyclerview-v7:23.4.0'
+    implementation 'com.android.support:design:23.4.0'
+
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.15.0"
+
+    testImplementation 'junit:junit:4.12'
 }
