--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.0.3'
+    ext {
+        agp_version = "8.2.1"
+        kotlin_version = '1.9.25'
+    }
+    
     repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+        maven {
+            url 'https://maven.aliyun.com/repository/jcenter'
+            name 'aliyun'
+        }
         jcenter()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+    dependencies {
+        classpath "com.android.tools.build:gradle:$agp_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
+        google()
+        mavenCentral()
+        maven {
+            url 'https://maven.aliyun.com/repository/jcenter'
+            name 'aliyun'
+        }
         jcenter()
     }
 }
